--- a/src/app/component/linea/linea.component.html
+++ b/src/app/component/linea/linea.component.html
@@ -3,7 +3,7 @@
       <div class="card">
         <div class="card-body">
   
-          <h4 class="card-title">Listado de Familias</h4><p></p>
+          <h4 class="card-title">Listado de Lineas</h4><p></p>
           <div class="d-flex justify-content-between">
             <div class="form-group">
               <input type="text" class="form-control" [(ngModel)]="textSearch" id="name"placeholder="Buscar"/>
