modulo productos avance v1

--- a/src/app/component/grupo/grupo.component.html
+++ b/src/app/component/grupo/grupo.component.html
@@ -109,7 +109,7 @@
                   </td>
                   <td class="fs-4">{{item.des_gru}}</td>
                   <td class="fs-4">{{item.cod_fam}} - {{item.des_fam}}</td>
-                  <td class="fs-4">{{item.cod_lin}} - {{item.des_line}}</td>
+                  <td class="fs-4">{{item.cod_line}} - {{item.des_line}}</td>
                   <td class="fs-4">{{item.cod_gru_final}} </td>
                   <td class="fs-4">{{item.total_product}} </td>
                   <td class="fs-4">{{item.fec_regis | date:"shortDate"}}</td>
