--- a/src/app/component/producto/producto.component.html
+++ b/src/app/component/producto/producto.component.html
@@ -52,19 +52,18 @@
                     <div class="form-group">
                       <label for="inputNombre">Familia</label>
                       <div class="input-group">
-                        <ng-select [items]="familia" (change)="onSearchFamily()" [(ngModel)]="filtros.famila" [style.width.px]="300" bindLabel="des_fam"  bindValue="id_fam" >
+                        <ng-select [items]="familiaFilters" (change)="onSearchFamily()" [(ngModel)]="filtros.famila" [style.width.px]="300" bindLabel="des_fam"  bindValue="id_fam" >
                         </ng-select>
                       </div>
                     </div>
                   </div>
-             
                 </div>
                 <div class="col-md-2">
                   <div class="custom-dropdown-container">
                     <div class="form-group">
                       <label for="inputNombre">Linea</label>
                       <div class="input-group">
-                        <ng-select  [items]="linea" (change)="onSearchLine()" [(ngModel)]="filtros.linea" [style.width.px]="200" bindLabel="des_line" bindValue="id_line" >
+                        <ng-select  [items]="lineaFilter" (change)="onSearchLine()" [(ngModel)]="filtros.linea" [style.width.px]="200" bindLabel="des_line" bindValue="id_line" >
                         </ng-select>
                       </div>
                     </div>
@@ -75,7 +74,7 @@
                     <div class="form-group">
                       <label for="inputNombre">Grupo</label>
                       <div class="input-group">
-                        <ng-select  [items]="grupo" (change)="onSearchGrupo()" [(ngModel)]="filtros.grupo" [style.width.px]="200" bindLabel="des_gru" bindValue="id_grou" >
+                        <ng-select  [items]="grupoFilters" (change)="onSearchGrupo()" [(ngModel)]="filtros.grupo" [style.width.px]="200" bindLabel="des_gru" bindValue="id_grou" >
                         </ng-select>
                       </div>
                     </div>
@@ -100,8 +99,7 @@
             <div class="form-group">
               <input type="text" class="form-control" [(ngModel)]="textSearch" id="name" placeholder="Buscar" />
             </div>
-            <!-- <button class="btn btn-info btn-group-lg btn-sm" (click)="open(content)">Nuevo <i
-                class="fas fa-plus"></i></button> -->
+            <button class="btn btn-info btn-group-lg btn-sm" (click)="open(modalAgregarProducto)">Nuevo <i  class="fas fa-plus"></i></button>
           </div>
           <div class="table-responsive">
             <table class="table align-middle text-nowrap">
@@ -135,10 +133,10 @@
                     <td class="fs-4">{{item.us_full_name}} </td>
                     <td class="fs-4">{{item.fech_regis | date:"shortDate"}}</td>
                     <td>
-                      <button type="button" ngbTooltip="Actualizar Grupo" (click)="edit(null, item.id_prod)"
+                      <!-- <button type="button" ngbTooltip="Actualizar Grupo" (click)="edit(null, item.id_prod)"
                         class="btn btn-outline-success w-sm btn-sm" style="margin-left: 5px">
                         <span><i class="fas fa-edit"></i></span>
-                      </button>
+                      </button> -->
                       <button type="button" ngbTooltip="Eliminar Grupo" (click)="eliminar(item.id_prod)" class="btn w-sm btn-sm btn-outline-danger"
                         style="margin-left: 5px">
                         <span><i class="fas fa-trash"></i></span>
@@ -156,3 +154,106 @@
       </div>
     </div>
   </div>
+
+  <ng-template #modalAgregarProducto let-modal >
+    <div class="modal-header">
+      <h4 class="modal-title" id="modal-basic-title">Agregar Producto</h4>
+      <button type="button" class="btn-close" aria-label="Close" (click)="getDismissReason(0)"></button>
+    </div>
+    <div class="modal-body" tabindex="-1" role="dialog" >
+      <div class="alert alert-danger" *ngIf="errors.length > 0" role="alert">
+        <span *ngFor="let err of errors; let last = last">
+          <span [innerHTML]="'*' + err.mensaje + (last ? '' : '<br>')"></span>
+        </span>
+      </div>
+      <form [formGroup]="formFormProducto" (ngSubmit)="guardar()">
+        <div formArrayName="productos">
+          <div class="container">
+            <div *ngFor="let producto of productos.controls; let i = index" [formGroupName]="i">
+              <ng-container *ngIf="producto as productoFormGroup">
+                <div class="row d-flex justify-content-around">
+                  <div class="col-md-4">
+                    <div class="custom-dropdown-container">
+                      <div class="form-group">
+                        <label for="inputNombre">Familia</label>
+                        <div class="input-group">
+                          <ng-select [items]="familia" (change)="getLineByIdFamilia($event)" formControlName="familia" [style.width.px]="400" bindLabel="des_fam"  bindValue="id_fam" >
+                          </ng-select>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-4">
+                    <div class="custom-dropdown-container">
+                      <div class="form-group">
+                        <label for="inputNombre">Linea</label>
+                        <div class="input-group">
+                          <ng-select  [items]="linea" (change)="getGrupoByIdLinea($event)" formControlName="line" [style.width.px]="400" bindLabel="des_line" bindValue="id_line" >
+                          </ng-select>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-4">
+                    <div class="custom-dropdown-container">
+                      <div class="form-group">
+                        <label for="inputNombre">Grupo</label>
+                        <div class="input-group">
+                          <ng-select  [items]="grupo" formControlName="grupo" (change)="addCodigoProducto($event, i)" [style.width.px]="400" bindLabel="des_gru" bindValue="id_grou" >
+                          </ng-select>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-4">
+                    <div class="form-group">
+                      <label for="inputCodigo">Codigo Producto</label>
+                      <input type="text" class="form-control" readonly formControlName="cod_product" id="inputCodigo"
+                        [ngClass]="{ 'is-invalid': submitted && productoFormGroup.get('cod_product')?.invalid }" />
+                      <div *ngIf="submitted && productoFormGroup.get('cod_product')?.invalid" class="invalid-feedback">
+                        <div *ngIf="productoFormGroup.get('cod_product')?.hasError('required')">Código es requerido</div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-4">
+                    <div class="form-group">
+                      <label for="inputNombre">Nombre Producto</label>
+                      <input type="text" class="form-control" formControlName="name_product" id="inputNombre"
+                        [ngClass]="{ 'is-invalid': submitted && productoFormGroup.get('name_product')?.invalid }" />
+                      <div *ngIf="submitted && productoFormGroup.get('name_product')?.invalid" class="invalid-feedback">
+                        <div *ngIf="productoFormGroup.get('name_product')?.hasError('required')">Nombre es requerido</div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-4">
+                    <div class="form-group">
+                      <label for="inputNombre">Descripción Producto</label>
+                      <input type="text" class="form-control" formControlName="des_product" id="inputNombre"
+                        [ngClass]="{ 'is-invalid': submitted && productoFormGroup.get('des_product')?.invalid }" />
+                      <div *ngIf="submitted && productoFormGroup.get('des_product')?.invalid" class="invalid-feedback">
+                        <div *ngIf="productoFormGroup.get('des_product')?.hasError('required')">Descripción es requerido</div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="form-group d-flex justify-content-center">
+                  <button type="button" (click)="eliminarProducto(i)" class="btn w-sm btn-sm btn-outline-danger"
+                    style="margin-top: 25px">
+                    <span><i class="fas fa-trash"></i></span>
+                  </button>
+                </div>
+              </ng-container>
+              <hr style="border-radius: 10px solid;">
+            </div>
+            <p></p>
+            <button type="button" class="btn btn-outline-success" (click)="addProducto()">Agregar Producto</button>
+            <p></p>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="submit" class="btn btn-outline-info">Guardar</button>
+        </div>
+      </form>
+    </div>
+  
+  </ng-template>
