filtro modulo asignacion de productos v5

--- a/src/app/component/family/family.component.html
+++ b/src/app/component/family/family.component.html
@@ -155,5 +155,5 @@
             </div>
       </form>
     </div>
-  
   </ng-template>
+  <ng-template #successTpl> I'm a success toast </ng-template>
