--- a/src/app/layouts/full/full.component.html
+++ b/src/app/layouts/full/full.component.html
@@ -33,28 +33,23 @@
         <!-- ============================================================== -->
         <!-- Logo -->
         <!-- ============================================================== -->
-        <a class="navbar-brand" href="/">
-          <!-- Logo icon -->
-          <b class="logo-icon">
-            <!--You can put here icon as well // <i class="wi wi-sunset"></i> //-->
-            <!-- Light Logo icon -->
-            <img
-              src="assets/images/logos/logo-icon.png"
-              alt="homepage"
-              class="dark-logo"
-            />
-          </b>
-          <!--End Logo icon -->
-          <!-- Logo text -->
-          <span class="logo-text">
-            <!-- Light Logo text -->
-            <img
-              src="assets/images/logos/logo-text.png"
-              class="dark-logo"
-              alt="homepage"
-            />
-          </span>
-        </a>
+        <div class="d-flex justify-content-center">
+          <a class="navbar-brand" href="/">
+            <!-- Logo icon -->
+            <!--End Logo icon -->
+            <!-- Logo text -->
+            <span class="logo-text ">
+              <!-- Light Logo text -->
+              <img
+                src="assets/images/logos/serprovisa.jpg"
+                style="width: 150px;height: 50px;"
+                class="dark-logo"
+                alt="homepage"
+              />
+            </span>
+          </a>
+        </div>
+
         <!-- ============================================================== -->
         <!-- End Logo -->
         <!-- ============================================================== -->
