--- a/src/app/component/grupo/grupo.component.html
+++ b/src/app/component/grupo/grupo.component.html
@@ -122,11 +122,11 @@
                       style="margin-left: 5px">
                       <span><i class="fas fa-trash"></i></span>
                     </button>
-                    <button type="button" ngbTooltip="Agregar Producto" (click)="agregarProducto(modalAgregarProducto, item)"
+                    <button type="button" ngbTooltip="Asignar Producto" (click)="agregarProducto(modalAgregarProducto, item)"
                       class="btn btn-outline-info w-sm btn-sm" style="margin-left: 5px">
                       <span><i class="fas fa-plus"></i></span>
                     </button>
-                    <button type="button" ngbTooltip="Ver Productos" (click)="verProducto(modalActualizar, item.id_grou)" class="btn w-sm btn-sm btn-outline-warning"
+                    <button type="button" ngbTooltip="Ver Productos" (click)="verProducto(item.id_grou)" class="btn w-sm btn-sm btn-outline-warning"
                       style="margin-left: 5px">
                       <span><i class="fas fa-eye"></i></span>
                     </button>
