--- a/src/app/dashboard/dashboard-components/feeds/feeds.component.html
+++ b/src/app/dashboard/dashboard-components/feeds/feeds.component.html
@@ -1,14 +1,21 @@
 <div class="card">
     <div class="card-body">
-        <h4 class="card-title">Responsables</h4>
+        <h4 class="card-title" style="font-weight: 400;">Ultimas Asignaciones Por Responsables</h4>
         <div class="feed-widget mt-4">
             <ul class="list-unstyled feed-body m-0">
                 <li class="feed-item d-flex align-items-center mb-3" *ngFor='let feed of feeds'>
                     <div class="feed-icon round round-sm text-white d-flex align-items-center justify-content-center rounded-circle {{feed.class}}">
                         <i class={{feed.icon}}></i>
                     </div>
-                    <h5 class="mb-0 fw-normal ms-3">{{feed.task}}</h5>
-                    <span class="text-muted ms-auto fs-2"> {{feed.time}}</span>
+                    <div class="d-flex just">
+                        <h5 class="mb-0 fw-normal ms-3">{{feed.task}}</h5>
+                        <!-- <span>Creacion: </span> -->
+                    </div>
+
+                    <button type="button" class="btn btn-info w-sm btn-sm ms-auto fs-2" (click)="verProducto(feed.id)">
+                        <span class="text-muted ms-auto fs-2 text-white" >Ver mas</span>
+                    </button>
+
                 </li>
             </ul>
         </div>
