--- a/src/app/dashboard/dashboard-components/top-cards/top-cards.component.html
+++ b/src/app/dashboard/dashboard-components/top-cards/top-cards.component.html
@@ -7,8 +7,8 @@
                         <i class={{topcard.icon}}></i>
                     </div>
                     <div class="ms-3">
-                        <h3 class="mb-0 font-weight-bold">{{topcard.title}}</h3>
-                        <small class="text-muted fs-3">{{topcard.subtitle}}</small>
+                        <h3 class="mb-0 font-weight-bold">{{topcard.total}}</h3>
+                        <small class="text-muted fs-3">{{topcard.title}}</small>
                     </div>
                 </div>
             </div>
